Fix spacing in section headings
* plasTeX/Renderers/HTMLNotes/Templates/jinja2/sectioning.jinja2s:
  Remove the nbsp entities because spacing will be done with CSS.
  Clean the template by introducing variables for the number, title,
  etc.

* plasTeX/Renderers/HTMLNotes/Style/sass/base/_typography.scss:
  Introduce a rule for the section heading.

* plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-default.css:
* plasTeX/Renderers/HTMLNotes/Themes/default/styles/theme-green.css:
Freshly generated after the above change to the Sass sources.

--- a/plasTeX/Renderers/HTMLNotes/Style/sass/base/_typography.scss
+++ b/plasTeX/Renderers/HTMLNotes/Style/sass/base/_typography.scss
@@ -32,6 +32,10 @@ h1 {
     margin: 1rem 0;
 }
 
+h1 span.section-number {
+    margin-right: 0.75rem;
+}
+
 h2 {
     font-size: 1.5rem;
     margin: 0.8rem 0;
